--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
-
 {
-  "name": "Flask Portfolio App",
+  "name": "Flask SuperHeroes App",
   "description": "A simple portfolio app built with python",
   "repository": "https://github.com/driftyco/ionic-heroku-button",
   "logo": "http://www.unixstickers.com/image/data/stickers/flask/Flask-logo.sh.png",
